--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,10 +1,10 @@
 .app {
-    width: 1010px;
-    background: #FFFFFF;
-    margin-right: auto;
-    margin-left: auto;
+  width: 1010px;
+  background: #ffffff;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 html {
-    background: #E5E5E5;
+  background: #e5e5e5;
 }
