--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,46 +1,48 @@
-html { font-family: "Inter", "system-ui"; }
-
-.card{
-    width: 454px;
-    background: #FFFFFF;
-    display: flex;
-    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
-    margin-bottom: 35px;
+html {
+  font-family: 'Inter', 'system-ui';
 }
 
-.card__image{
-    width: 183px;
-    height: 100%;
-    object-fit: cover
+.card {
+  width: 454px;
+  background: #ffffff;
+  display: flex;
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
+  margin-bottom: 35px;
 }
 
-.card__content{
-    padding: 20px;
+.card__image {
+  width: 183px;
+  height: 100%;
+  object-fit: cover;
 }
 
-.content__title{
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: normal;
-    color: #000000;
-    margin-top: 0;
-    margin-bottom: 7px;
+.card__content {
+  padding: 20px;
 }
 
-.content__date{
-    font-size: 12px;
-    line-height: 22px;
-    color: #827E7E;
-    height: 22px;
-    margin-bottom: 9px;
+.content__title {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: normal;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 7px;
 }
 
-.content__plot{
-    width: 228px;
-    height: 129px;
-    font-size: 12px;
-    line-height: 22px;
-    color: #000000;
-    margin-top: 7px;
-    overflow-y: hidden;
+.content__date {
+  font-size: 12px;
+  line-height: 22px;
+  color: #827e7e;
+  height: 22px;
+  margin-bottom: 9px;
+}
+
+.content__plot {
+  width: 228px;
+  height: 129px;
+  font-size: 12px;
+  line-height: 22px;
+  color: #000000;
+  margin-top: 7px;
+  overflow-y: hidden;
 }
