--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,6 +1,6 @@
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 40px;
-  justify-content: space-between;
+  padding: 35px 0px;
+  justify-content: space-evenly;
 }
