adaptive layout and some other fixes

--- a/src/MessageFailNet/MessageFailNet.css
+++ b/src/MessageFailNet/MessageFailNet.css
@@ -1,7 +1,6 @@
 .message-fail-net {
   display: flex;
   flex-direction: column;
-  background-color: black;
   align-items: center;
   height: 500px;
   justify-content: center;
@@ -10,10 +9,10 @@
 .warning-1 {
   font-family: 'Stencil', 'Impact', 'Franklin Gothic Medium', Arial, sans-serif;
   font-size: xx-large;
-  color: white;
+  color: black;
 }
 
 .warning-2 {
   font-family: monospace, system-ui;
-  color: white;
+  color: black;
 }
