--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,21 @@
-.app {
-  width: 1010px;
-  min-height: 740px;
+.app-container {
+  max-width: 1010px;
+  min-width: 420px;
+  height: auto;
   background: #ffffff;
-  margin-right: auto;
-  margin-left: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 13px 36px;
+  margin: 0 auto
+}
+
+@media (max-width: 426px) {
+  .app-container {
+    padding: 0 16px 
+  }
+}
+
+.app-container .ant-layout {
+  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 html {
