--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,6 +1,20 @@
 .card-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 35px 0px;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 32px;
+  grid-column-gap: 36px;
+  margin-top: 34px
+}
+
+@media (max-width: 1050px ) {
+  .card-list {
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+  }
+}
+
+@media (max-width: 555px) {
+ .card-list{
+    margin-top: 10px;
+ }
 }
