--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,12 +4,12 @@
   height: auto;
   background: #ffffff;
   padding: 13px 36px;
-  margin: 0 auto
+  margin: 0 auto;
 }
 
 @media (max-width: 426px) {
   .app-container {
-    padding: 0 16px 
+    padding: 0 16px;
   }
 }
 
